
  group_quote_pdf_gen_wx.cpp
Avoid needless conversions of std::string to wxString (VZ).

20160327T1129Z <gchicares@sbcglobal.net> [454]

  msw_workarounds.cpp
  msw_workarounds.hpp
Make this platform-specific code empty for other platforms (VZ).

20160327T1130Z <gchicares@sbcglobal.net> [454]

  configure.ac
Fix defect introduced 20160325T1225Z: invalid warning (VZ).

20160327T1305Z <gchicares@sbcglobal.net> [454]

  account_value.hpp
  accountvalue.cpp
  assert_lmi.hpp
  dbdict.cpp
  group_values.cpp
  ihs_acctval.cpp
  ledger_xml_io.cpp
  xml_lmi.cpp
Avoid shadowing variable names (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-02/msg00017.html

20160327T2223Z <zeitlin> [454]

  configure.ac
Recognize gcc cross-compilers.

20160330T1945Z <gchicares@sbcglobal.net> [454]

  multidimgrid_any.cpp
Further improve the 20160327T1021Z improvement (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-03/msg00042.html

20160330T2132Z <gchicares@sbcglobal.net> [454]

  docmdichildframe_ex.cpp
  docmdichildframe_ex.hpp
Remove unneeded dtor (VZ).

20160330T2135Z <gchicares@sbcglobal.net> [454]

  docmdichildframe_ex.cpp
  docmdichildframe_ex.hpp
Remove unneeded statusbar workarounds (VZ).

20160330T2141Z <gchicares@sbcglobal.net> [454]

  Makefile.am
  docmdichildframe_ex.cpp [expunged]
  docmdichildframe_ex.hpp [expunged]
  objects.make
  skeleton.cpp
Expunge a module that no longer does anything. See:
  http://lists.nongnu.org/archive/html/lmi/2016-03/msg00054.html
  http://lists.nongnu.org/archive/html/lmi/2014-11/msg00062.html

20160330T2222Z <gchicares@sbcglobal.net> [454]

  test_coding_rules.cpp
Allow long lines with 'https:' as well as 'http:'.

20160330T2224Z <gchicares@sbcglobal.net> [454]

  skeleton.cpp
Avoid crashing due to indiscriminate event handling (VZ). See:
  https://github.com/vadz/lmi/commit/6355bb270241826fa32e151eb197a4b1f5cd5c12.patch
  http://lists.nongnu.org/archive/html/lmi/2014-11/msg00062.html
